--- a/style/style.css
+++ b/style/style.css
@@ -1,198 +1,198 @@
-body{
-    font-family: 'Roboto', sans-serif;
+body {
+  font-family: "Roboto", sans-serif;
 }
-.container{
-    max-width: 1200px;
-    margin: 0 auto;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
-.flex{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.header{
-    margin: 13px auto 15px;
+.header {
+  margin: 13px auto 15px;
 }
-.header_ul{
-    display: flex;
-    gap: 62px;
+.header_ul {
+  display: flex;
+  gap: 62px;
 }
-.header_link{
-font-size: 14px;
-line-height: 14px;
-color: #1C1C1C;
-text-decoration: none;
+.header_link {
+  font-size: 14px;
+  line-height: 14px;
+  color: #1c1c1c;
+  text-decoration: none;
 }
-.button{
-height: 40px;
-width: 157px;
-border-radius: 20px;
-background:#6F2CFF;
-border: none;
-font-size: 14px;
-line-height: 14px;
-color: #FFFFFF;
-}
-
-.button:hover{
-    background:#835adb; 
-    transition: 2s; 
-    cursor: pointer;
-}
-.main{
-    background: #F6BED9;
-    padding: 59px 0 58px;
-}
-.maine_title{
-font-weight: 700;
-font-size: 54px;
-line-height: 61px;max-width: 470px;
-}
-.maine_title-violet{
-    color: #6F2DFF;
-}
-.maine_text{
-font-size: 18px;
-line-height: 30px;
-max-width: 438px;
-margin: 18px 0;
-}
-.maine_text-bold{
-    font-weight: 700;
-}
-.main_input{
-    height: 45px;
-    width: 268px;
-    border: 1px solid #6F2CFF;
-    border-radius: 28px;
-    padding-left: 26px;
-}
-.main_input::placeholder{
-    font-size: 15px;
-    line-height: 21px;
-    color: rgba(0, 0, 0, 0.27);
-}
-.main_input:focus{
-    outline: none;
-}
-.main_button{
-height: 45px;
-width: 187px;
-margin-left: 9px;
-}
-.grow{
-    margin: 136px auto;
-}
-.grow_title{
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 45px;
-    color: #1C1C1C;
-    max-width: 415px;
-}
-.grow_flex{
-    display: flex;
-    gap: 34px;
-}
-.grow_element{
-    max-width: 333px;
-    text-align: center;
-}
-.grow_item{
-    padding: 35px 0 85px;
-    box-shadow: 0px 2px 4px rgba(192, 192, 192, 0.5);
-    border-radius: 0px 0px 7px 7px;
-}
-.grow_pretitle{
-    font-size: 26px;
-    line-height: 22px;
-    margin-bottom: 28px;
-}
-.grow_text{
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: #6F2CFF;
-    max-width: 219px;
-    margin: 0 auto;
-    
-}
-.commerse{
-    margin-bottom: 136px;
-    text-align: center;
-
-}
-.commerse_title{
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 45px;
-    margin-bottom: 79px;
-}
-.commerse_pretile{
-    font-weight: 700;
-    font-size: 19px;
-    line-height: 23px;
-    margin: 42px 0 16px;
-}
-.commerse_text{
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 22px;
-    max-width: 314px;
-}
-.footer{
-    background: #20003C;
-    padding: 58px 0;
-    }
-    .footer_ul{
-        display: flex;
-        gap: 74px;
-    }
-    .footer_link{
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 21px;
-    color: #FFFFFF;
-    text-decoration: none;
+.button {
+  height: 40px;
+  width: 157px;
+  border-radius: 20px;
+  background: #6f2cff;
+  border: none;
+  font-size: 14px;
+  line-height: 14px;
+  color: #ffffff;
 }
 
-@media screen and (max-width: 550px){
-  .flex, .grow_flex{
+.button:hover {
+  background: #835adb;
+  transition: 2s;
+  cursor: pointer;
+}
+.main {
+  background: #f6bed9;
+  padding: 59px 0 58px;
+}
+.maine_title {
+  font-weight: 700;
+  font-size: 54px;
+  line-height: 61px;
+  max-width: 470px;
+}
+.maine_title-violet {
+  color: #6f2dff;
+}
+.maine_text {
+  font-size: 18px;
+  line-height: 30px;
+  max-width: 438px;
+  margin: 18px 0;
+}
+.maine_text-bold {
+  font-weight: 700;
+}
+.main_input {
+  height: 45px;
+  width: 268px;
+  border: 1px solid #6f2cff;
+  border-radius: 28px;
+  padding-left: 26px;
+}
+.main_input::placeholder {
+  font-size: 15px;
+  line-height: 21px;
+  color: rgba(0, 0, 0, 0.27);
+}
+.main_input:focus {
+  outline: none;
+}
+.main_button {
+  height: 45px;
+  width: 187px;
+  margin-left: 9px;
+}
+.grow {
+  margin: 136px auto;
+}
+.grow_title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 45px;
+  color: #1c1c1c;
+  max-width: 415px;
+}
+.grow_flex {
+  display: flex;
+  gap: 34px;
+}
+.grow_element {
+  max-width: 333px;
+  text-align: center;
+}
+.grow_item {
+  padding: 35px 0 85px;
+  box-shadow: 0px 2px 4px rgba(192, 192, 192, 0.5);
+  border-radius: 0px 0px 7px 7px;
+}
+.grow_pretitle {
+  font-size: 26px;
+  line-height: 22px;
+  margin-bottom: 28px;
+}
+.grow_text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #6f2cff;
+  max-width: 219px;
+  margin: 0 auto;
+}
+.commerse {
+  margin-bottom: 136px;
+  text-align: center;
+}
+.commerse_title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 45px;
+  margin-bottom: 79px;
+}
+.commerse_pretile {
+  font-weight: 700;
+  font-size: 19px;
+  line-height: 23px;
+  margin: 42px 0 16px;
+}
+.commerse_text {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+  max-width: 314px;
+}
+.footer {
+  background: #20003c;
+  padding: 58px 0;
+}
+.footer_ul {
+  display: flex;
+  gap: 74px;
+}
+.footer_link {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 550px) {
+  .flex,
+  .grow_flex {
     flex-direction: column;
-    }
-    .container{
-        max-width: 500px;
-    }
-    .header{
-        gap: 30px;
-    }
-    .header__nav{
-        display: none;
-    }
-    .main{
-        text-align: center;
-    }
-    .maine_title{
-        font-size: 48px;
-        line-height: 55px;
-    }
-    .maine_text{
-        margin: 18px auto;
-    }
-    .main_img{
-        margin-top: 40px;
-    }
-    .grow{
-        gap: 30px;
-        margin: 60px auto;
-    }
-    .grow_title{
-        text-align: center;
-    }
-    .footer nav{
-        display: none;
-    }
-    .commerse_title{
-        margin-bottom: 40px;
-    }
-  }  
+  }
+  .container {
+    max-width: 500px;
+  }
+  .header {
+    gap: 30px;
+  }
+  .header__nav {
+    display: none;
+  }
+  .main {
+    text-align: center;
+  }
+  .maine_title {
+    font-size: 48px;
+    line-height: 55px;
+  }
+  .maine_text {
+    margin: 18px auto;
+  }
+  .main_img {
+    margin-top: 40px;
+  }
+  .grow {
+    gap: 30px;
+    margin: 60px auto;
+  }
+  .grow_title {
+    text-align: center;
+  }
+  .footer nav {
+    display: none;
+  }
+  .commerse_title {
+    margin-bottom: 40px;
+  }
+}
