--- a/style/style.css
+++ b/style/style.css
@@ -172,15 +172,26 @@ body {
   .main {
     text-align: center;
   }
+  .main_container_content {
+    padding: 0 10px;
+  }
   .maine_title {
-    font-size: 48px;
+    font-size: 40px;
     line-height: 55px;
   }
   .maine_text {
     margin: 18px auto;
   }
+  .main_button {
+    margin-left: unset;
+    margin-top: 10px;
+  }
   .main_img {
     margin-top: 40px;
+    max-width: 100%;
+  }
+  .main_img img {
+    max-width: 100%;
   }
   .grow {
     gap: 30px;
@@ -188,11 +199,25 @@ body {
   }
   .grow_title {
     text-align: center;
+    margin: 0 10px;
+    font-size: 35px;
   }
   .footer nav {
     display: none;
   }
+  .commerse {
+    margin-bottom: 50px;
+  }
   .commerse_title {
     margin-bottom: 40px;
+  }
+  .commerse_tile {
+    margin-bottom: 25px;
+  }
+  .commerse_tile:last-of-type {
+    margin-bottom: 0;
+  }
+  .commerse_pretile {
+    margin-top: 16px;
   }
 }
